--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
 <head>
   <meta charset="utf-8">
@@ -11,7 +10,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Pub</title>
+  <title>01ST-Pub</title>
   <meta name="description" content="A public git repository for my information">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,10 +21,10 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Pub</h1>
+      <h1 class="title">01ST-Pub</h1>
     </header>
     <div id="container">
-      <p class="tagline">A public git repository for my information</p>
+      <p class="tagline">A public git repository for 01ST's information</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
