--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 
       </div>
-      <div class="creds">
+ <!--     <div class="creds">
         <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
+      </div>-->
     </footer>
   </div>
   <div class="current-section">
