--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p>Welcome to 01ST’s information board!</p>
 
-<p>My E-mail address is <a href="mailto:vxst@live.com">vxst@live.com</a>, and my GPG key is 57FD3E73. The fingerprint is 1319 7F6D A0C4 AB99 2EAD 1A00 35E5 0A82 57FD 3E73; You can find my GPG and SSH public key in the repo.</p>
+<p>My E-mail address is <a href="mailto:vxst@live.com">vxst@vxst.org</a>, and my GPG key is 57FD3E73. The fingerprint is 1319 7F6D A0C4 AB99 2EAD 1A00 35E5 0A82 57FD 3E73; You can find my GPG and SSH public key in the repo.</p>
         </article>
       </div>
     </div>
